WORK-293 fixed a bug on IE when trying to set a due date on a milestone

--- a/src/main/webapp/app/components/project/lvg-project.css
+++ b/src/main/webapp/app/components/project/lvg-project.css
@@ -273,7 +273,7 @@ ul.lvg-admin-import .col-sm-1 {
 }
 
 .lavagna-date-column {
-    width: 125px;
+    width: 175px;
 }
 
 .lavagna-confirm-column {
